syntax = "proto3";

package proto;

import "invitation/payload_messages.proto";

option go_package = "./invitation";

service InvitationService {
    rpc Create(CreateInvitationRequest) returns (InvitationBaseResponse){};
    rpc Get(GetInvitationByIDRequest) returns (GetInvitationByIDResponse){};
    rpc GetAllByUserID(GetAllInvitationByUserIDRequest)returns (GetAllInvitationByUserIDResponse) {};
    rpc Update(UpdateInvitationByIDRequest) returns (InvitationBaseResponse) {};
    rpc Delete(DeleteInvitationByIDRequest) returns (InvitationBaseResponse) {};
    rpc GetLink(GetInvitationLinkByIDRequest) returns (GetInvitationLinkByIDResponse) {};
    rpc Verify(VerifyInvitationRequest) returns (VerifyInvitationResponse) {};
}