syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "./invitation";

message InvitationBaseResponse {
    string message = 1 [json_name = "message"];
}

message CreateInvitationRequest {
    string user_id = 1 [json_name = "user_id"];
    string name = 2 [json_name = "name"];
    optional string invitation_label_id = 3 [json_name = "invitation_label_id"];
    optional string invitation_category_id = 4 [json_name = "invitation_category_id"];
}

message GetAllInvitationByUserIDRequest {
    string user_id = 1 [json_name = "user_id"];
    optional string search = 2 [json_name = "search"];
    optional int32 page = 3 [json_name = "page"];
    optional int32 limit = 4 [json_name = "limit"];
    optional bool is_open = 5 [json_name = "is_open"];
    optional bool is_coming = 6 [json_name = "is_coming"];
    optional bool is_send_money = 7 [json_name = "is_send_money"];
    optional bool is_send_gift = 8 [json_name = "is_send_gift"];
    optional bool is_check_in = 9 [json_name = "is_check_in"];
    repeated string invitation_labels = 10 [json_name = "invitation_labels"];
    repeated string invitation_categories = 11 [json_name = "invitation_categories"];
}

message InvitationPaging {
    int32 current_page = 1 [json_name = "current_page"];
    int32 total_page = 2 [json_name = "total_page"];
    int32 count = 3 [json_name = "count"];
}

message GetAllInvitationByUserIDResponse{
    string message = 1 [json_name = "message"];
    repeated GetInvitationByIDResponse invitations = 2 [json_name = "invitations"];
    InvitationPaging paging = 3 [json_name = "paging"];
}

message GetInvitationByIDRequest {
    string id = 1 [json_name = "id"];
}

message GetInvitationLabelResponse {
    string id = 1 [json_name = "id"];
    string user_id = 2 [json_name = "user_id"];
    string name = 3 [json_name = "name"];
    google.protobuf.Timestamp created_at = 4 [json_name = "created_at"];
    google.protobuf.Timestamp updated_at = 5 [json_name = "updated_at"];
    optional google.protobuf.Timestamp deleted_at = 6 [json_name = "deleted_at"];
}

message GetInvitationCategoryResponse {
    string id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
    google.protobuf.Timestamp created_at = 3 [json_name = "created_at"];
    google.protobuf.Timestamp updated_at = 4 [json_name = "updated_at"];
    google.protobuf.Timestamp deleted_at = 5 [json_name = "deleted_at"];
}

message GetInvitationByIDResponse {
    string id = 1 [json_name = "id"];
    string user_id = 2 [json_name = "user_id"];
    string name = 3 [json_name = "name"];
    optional GetInvitationLabelResponse invitation_label = 4 [json_name = "invitation_label"];
    optional GetInvitationCategoryResponse invitation_category = 5 [json_name = "invitation_category"];
    bool is_open = 6 [json_name = "is_open"];
    optional google.protobuf.Timestamp open_at = 7 [json_name = "open_at"];
    optional bool is_coming = 8 [json_name = "is_coming"];
    bool is_send_money = 9 [json_name = "is_send_money"];
    bool is_send_gift = 10 [json_name = "is_send_gift"];
    bool is_check_in = 11 [json_name = "is_check_id"];
    optional google.protobuf.Timestamp check_in_at = 12 [json_name = "check_in_at"];
    google.protobuf.Timestamp created_at = 13 [json_name = "created_at"];
    google.protobuf.Timestamp updated_at = 14 [json_name = "updated_at"];
    optional google.protobuf.Timestamp deleted_at = 15 [json_name = "deleted_at"];
}

message UpdateInvitationByIDRequest {
    string id = 1 [json_name = "id"];
    optional string name = 2 [json_name = "name"];
    optional string invitation_label_id = 3 [json_name = "invitation_label_id"];
    optional string invitation_category_id = 4 [json_name = "invitation_category_id"];
}

message DeleteInvitationByIDRequest {
    string id = 1 [json_name = "id"];
}

message GetInvitationLinkByIDRequest {
    string id = 1 [json_name = "id"];
}

message GetInvitationLinkByIDResponse {
    string link = 1 [json_name = "link"];
}

message VerifyInvitationRequest {
    string id = 1 [json_name = "id"];
}

message VerifyInvitationResponse {
    string user_id = 1 [json_name = "user_id"];
    string invitation_id = 2 [json_name = "invitation_id"];
}
